--- a/infrastructure/production/keycloak/ingressConfig.yaml
+++ b/infrastructure/production/keycloak/ingressConfig.yaml
@@ -12,8 +12,8 @@ spec:
     - match: Host(`keycloak.vandelocht.uk`)
       kind: Rule
       services:
-        - name: keycloak-server
-          port: 2283
+        - name: keycloak
+          port: 80
       middlewares:
         - name: svc-keycloak-headers
   tls:
@@ -49,38 +49,3 @@ spec:
     customFrameOptionsValue: SAMEORIGIN
     customRequestHeaders:
       X-Forwarded-Proto: https
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: keycloak-local
-  namespace: keycloak
-  annotations:
-    kubernetes.io/ingress.class: traefik-external
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`keycloak.lan.vandelocht.uk`)
-      kind: Rule
-      services:
-        - name: keycloak-server
-          port: 2283
-      middlewares:
-        - name: svc-keycloak-headers
-  tls:
-    secretName: keycloak-lan-vandelocht-uk-production-tls
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: keycloak-lan-vandelocht-uk
-  namespace: keycloak
-spec:
-  secretName: keycloak-lan-vandelocht-uk-production-tls
-  issuerRef:
-    name: letsencrypt-production
-    kind: ClusterIssuer
-  commonName: "keycloak.lan.vandelocht.uk"
-  dnsNames:
-    - "keycloak.lan.vandelocht.uk"
