--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -86,8 +86,8 @@ spec:
           isDefault: false
           jsonData:
             version: Flux
-            organization: Homelab
-            defaultBucket: proxmox
+            organization: HomeLab
+            defaultBucket: Proxmox
           secureJsonData:
             token: ${INFLUXDB_TOKEN}
 
