--- a/infrastructure/base/keycloak/manifest.yaml
+++ b/infrastructure/base/keycloak/manifest.yaml
@@ -46,12 +46,14 @@ spec:
       tls: true
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
+        kubernetes.io/ingress.class: traefik-external
     adminIngress:
       enabled: true
       ingressClassName: traefik-external
       hostname: keycloak.lan.vandelocht.uk
       tls: true
       annotations:
+        kubernetes.io/ingress.class: traefik-external
         cert-manager.io/cluster-issuer: letsencrypt-production
   valuesFrom:
     - kind: Secret
