--- a/clusters/staging/apps/immich.yaml
+++ b/clusters/staging/apps/immich.yaml
@@ -24,3 +24,31 @@ spec:
   path: ./apps/production/immich
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: immich-cron
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: ceph-csi-rbd
+    - name: smb-csi
+    - name: traefik-config
+    - name: cert-manager-config
+    - name: metallb-config
+    - name: cloudnative-pg
+    - name: immich
+  interval: 1h
+  retryInterval: 1m
+  timeout: 15m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/immich/cronjobs
+  prune: true
+  wait: true
