--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -73,6 +73,21 @@ spec:
       grafana.ini:
         dashboards:
           default_home_dashboard_path: /tmp/dashboards/kube-overview.json
+        server:
+          root_url: "https://grafana.lan.vandelocht.uk"
+        auth:
+          disable_login_form: true # Redirects all users to OIDC login
+          disable_signout_menu: false
+        auth.generic_oauth:
+          enabled: true
+          name: Keycloak
+          allow_sign_up: true
+          client_id: "grafana"
+          scopes: "openid profile email"
+          auth_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/auth"
+          token_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/token"
+          api_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/userinfo"
+          role_attribute_path: "contains(realm_access.roles[*], 'grafana-admin') && 'Admin' || contains(realm_access.roles[*], 'grafana-editor') && 'Editor' || 'Viewer'"
       defaultDashboardsEnabled: false
       admin:
         existingSecret: "grafana-secret"
