--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -76,14 +76,17 @@ spec:
         server:
           root_url: "https://grafana.lan.vandelocht.uk"
         auth:
-          disable_login_form: true # Redirects all users to OIDC login
+          # disable_login_form: true # Redirects all users to OIDC login
           disable_signout_menu: false
         auth.generic_oauth:
           enabled: true
           name: Keycloak
           allow_sign_up: true
           client_id: "grafana"
-          scopes: "openid profile email"
+          scopes: "openid profile email offline_access roles"
+          email_attribute_path: email
+          login_attribute_path: username
+          name_attribute_path: full_name
           auth_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/auth"
           token_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/token"
           api_url: "https://keycloak.vandelocht.uk/realms/k8s/protocol/openid-connect/userinfo"
