--- a/clusters/staging/monitoring.yaml
+++ b/clusters/staging/monitoring.yaml
@@ -57,8 +57,8 @@ spec:
     - name: monitoring-controller
     - name: traefik-config
   interval: 1h
-  retryInterval: 1h
-  timeout: 2h
+  retryInterval: 30m
+  timeout: 15m
   prune: true
   wait: true
   sourceRef:
