--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -8,9 +8,8 @@ resources:
   - grafana-secret.yaml
   - prometheus-claim-secret.yaml
   - alertmanager-claim-secret.yaml
-  - grafana-client-secret.yaml
+  - grafana-env-secret.yaml
   - grafana-claim-secret.yaml
-  - influxdb-grafana-secret.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
