--- a/infrastructure/base/oauth2proxy/kustomization.yaml
+++ b/infrastructure/base/oauth2proxy/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - keycloak.yaml
-  - oauth2proxy.yaml
+  - manifest.yaml
+  - oauth2-secret.yaml
