--- a/infrastructure/production/oauth2proxy/kustomization.yaml
+++ b/infrastructure/production/oauth2proxy/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/oauth2proxy
-  # - ingressConfig.yaml
+  - ingressConfig.yaml
 
 patches:
   - path: patch.yaml
