--- a/infrastructure/production/oauth2proxy/ingressConfig.yaml
+++ b/infrastructure/production/oauth2proxy/ingressConfig.yaml
@@ -49,3 +49,17 @@ spec:
     customFrameOptionsValue: SAMEORIGIN
     customRequestHeaders:
       X-Forwarded-Proto: https
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: forward-auth-keycloak
+  namespace: oauth2proxy
+spec:
+  forwardAuth:
+    address: http://oauth2proxy-oauth2-proxy.oauth2proxy.svc.cluster.local/oauth2/
+    trustForwardHeader: true
+    authResponseHeaders:
+      - "X-Auth-Request-User"
+      - "X-Auth-Request-Email"
+      - "Authorization"
