--- a/infrastructure/base/oauth2proxy/manifest.yaml
+++ b/infrastructure/base/oauth2proxy/manifest.yaml
@@ -59,5 +59,5 @@ spec:
     extraArgs:
       provider-display-name: Keycloak
       skip-provider-button: true
-      oidc-extra-audience: "immich account"
+      oidc-extra-audience: "oauth2proxy"
       reverse-proxy: true
