--- a/infrastructure/production/oauth2proxy/ingressConfig.yaml
+++ b/infrastructure/production/oauth2proxy/ingressConfig.yaml
@@ -57,7 +57,7 @@ metadata:
   namespace: oauth2proxy
 spec:
   forwardAuth:
-    address: http://oauth2proxy-oauth2-proxy.oauth2proxy.svc.cluster.local/oauth2/auth
+    address: http://oauth2proxy-oauth2-proxy.oauth2proxy.svc.cluster.local/oauth2
     trustForwardHeader: true
     authResponseHeaders:
       - "X-Auth-Request-User"
