--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -69,6 +69,16 @@ spec:
               resources:
                 requests:
                   storage: 15Gi
+        additionalScrapeConfigs:
+          - job_name: "ceph-mgr"
+            scrape_interval: 15s
+            static_configs:
+              - targets:
+                  [
+                    "192.168.178.40:9283",
+                    "192.168.178.41:9283",
+                    "192.168.178.42:9283",
+                  ]
     grafana:
       grafana.ini:
         dashboards:
