--- a/infrastructure/base/ceph-csi-rbd/manifest.yaml
+++ b/infrastructure/base/ceph-csi-rbd/manifest.yaml
@@ -56,6 +56,18 @@ spec:
     secret:
       name: csi-rbd-secret
       create: false
+    provisioner:
+      httpMetrics:
+        service:
+          annotations:
+            prometheus.io/scrape: "true"
+            prometheus.io/port: "8080"
+    nodeplugin:
+      httpMetrics:
+        service:
+          annotations:
+            prometheus.io/scrape: "true"
+            prometheus.io/port: "8080"
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
