prometheus: modified values to let prometheus watch in all namespaces for podmonitors

--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -58,9 +58,12 @@ spec:
           requests:
             cpu: 200m
             memory: 200Mi
-        podMonitorSelector:
-          matchLabels:
-            app.kubernetes.io/component: monitoring
+        # podMonitorSelector:
+        #   matchLabels:
+        #     app.kubernetes.io/component: monitoring
+        podMonitorNamespaceSelector: {} # Empty selector matches all namespaces[6][8]
+        podMonitorSelector: {}
+        podMonitorSelectorNilUsesHelmValues: false
         storageSpec:
           volumeClaimTemplate:
             spec:
