immich-cron: Added cronjobs for us

--- a/apps/production/immich/cronjobs/immich-face-to-album-secret.yaml
+++ b/apps/production/immich/cronjobs/immich-face-to-album-secret.yaml
@@ -5,24 +5,33 @@ metadata:
     namespace: immich
 type: Opaque
 stringData:
-    IMMICH_API_KEY: ENC[AES256_GCM,data:9zBzq7GeIeY7Wa60kc97XKnfrFoVXZcrTS5GCr3zeMt6y7PLBA9VHxLIzg==,iv:8vXY6z+LMf82VjgUQpZHbibhdQYYojbMtQuymTy1/C8=,tag:UMJ488XpoVwl/qDoOk22Ew==,type:str]
-    IMMICH_SERVER_URL: ENC[AES256_GCM,data:Tnks/F+umtgSXnpvTQcpfEASGw10iAyK4Q==,iv:0ogGJiqfSfIu1BHlGlnOsK8qaomyirZKm97HIa8NsF8=,tag:i+p7qTDD6U8ILMkk7uHjfg==,type:str]
-    IMMICH_FACE_ID_THEO: ENC[AES256_GCM,data:wcPgmhCGOjhOYj6Qth19lJTZLt1r75Dz2SGs8bGrFAPBxL6b,iv:UJcfvaI3jyxRdHyrNf2p2iqquQLQlA88nsgFaGweNTQ=,tag:iX+HZzTa2Cu4J+xqQ3JrUw==,type:str]
-    IMMICH_ALBUM_ID_THEO: ENC[AES256_GCM,data:4x3NibmrQ0/K0jF5siORxE04veyCebr75T+SJ+mX5ANjpBCQ,iv:ursuMDhCkL87rmqcwPO33bBcT6TB9zyAf1ivT87B6m0=,tag:kktcem+aXUfAcCZKdlLLmw==,type:str]
-    IMMICH_FACE_ID_FRIDA: ENC[AES256_GCM,data:si2texGn8pyigkUZWc2O0rCr3IueGMBYfV0GMyGuJ9Y9zqHf,iv:rWOCJMUnq/oclu7uqLUZUucLnD0yeIkRKHYWiM6T2js=,tag:a+Rj7okco7pGurx2kA9omA==,type:str]
-    IMMICH_ALBUM_ID_FRIDA: ENC[AES256_GCM,data:rMsktMeDc0TP7zpcG7PUX1sEwrOHbOn4Y5/lYAiFzPhYYrQH,iv:uYYxIn78um7pYcQlCzPCrPAM3Ak5VPGKUD3szHGDTu8=,tag:lKVXYOKZQBFF23Y12TzI3A==,type:str]
+    IMMICH_API_KEY: ENC[AES256_GCM,data:x4W3SpaOgTUOYhce97YhMSyH8pKYEZKtc0sGJ7wt/l6L2rR7J4bFEPdVCA==,iv:34aMp9rTolWs8pqp8Vm123hJ1R9CK0fBPHAtpZhTr+E=,tag:5aBYYuCHiT1Fz4CRYr9UBQ==,type:str]
+    IMMICH_SERVER_URL: ENC[AES256_GCM,data:MxIqwFR1UEzHRkZSvxU+EGDUjiMAHzyhcQ==,iv:1aI11wb6yL+Chx/nrczyUUa99EE2BIN2zokf2M4944s=,tag:rW/QUf28VJKZBdD8upt35Q==,type:str]
+    IMMICH_FACE_ID_THEO: ENC[AES256_GCM,data:6TOTNMAn14VF6oVygnWGQ1xwTGv41sp0khuK6K+ilgZVtI22,iv:4rsFgp2w/W4sMGQsjgaZvY2GkHwOiMBFJDgzSguGUq0=,tag:z2G3v+1DmDwBJg9+pKD+3g==,type:str]
+    IMMICH_ALBUM_ID_THEO: ENC[AES256_GCM,data:EDiOUoRMMqo7hYS6YquGAnyLfyu4f06LIWUwSmtsGCT7bXr4,iv:WtDv3vDdSgnBHaz9zfvbyBhZkeiVJKa005oYHQ3BNJI=,tag:0nwElNZd9M5/q9K4/Eajdg==,type:str]
+    IMMICH_FACE_ID_FRIDA: ENC[AES256_GCM,data:XUJwG6uqi0isPNfN4klLa0j7n5GKjyTD5RQWMVEcfajngR8L,iv:RzmlMS1Oh2K6yIp3DRa08k0cDI1XDyl1vzzFQ/3sQIk=,tag:LcsT3ztaeozqWR6tNjNm6Q==,type:str]
+    IMMICH_ALBUM_ID_FRIDA: ENC[AES256_GCM,data:g/5QpW+JUgBeyDgW59kH0+oP4uI2+Dp9UPnj0A1mTvYI9CrT,iv:Gwy+FIrNZJEHlecVATh0ViGk2rRoM04kBAc0cEjZnpk=,tag:LtErwkVaVhAPI4bz8BKRNQ==,type:str]
+    IMMICH_FACE_ID_JACKY: ENC[AES256_GCM,data:oHHaqD/6vvjw4wV9yKkMx5TbTlBJRjRhyY9aEjY96sBYHOAV,iv:rXAQmBmUOop3pzZd6OzyllpoDfzRVwDLZQuxTESyVbE=,tag:qwfRHzmdvT2ex0X4+2HH7g==,type:str]
+    IMMICH_ALBUM_ID_JACKY: ENC[AES256_GCM,data:W69j55ekn17Uqbq0hCi9U9hfyO2ugv/xrQzR3i5AKP653CYv,iv:AJEewzfFgZhrScRjulhdYjIPo47VBafv3C0yp1oeSbM=,tag:IRDAnwu0+/J3P6YtFtTQeQ==,type:str]
+    IMMICH_FACE_ID_JAN: ENC[AES256_GCM,data:MnWZQHxezSF3ZlGkwUppIkzROPR2ikIdBdN+B6q46qtiSKZY,iv:2V90LNOT3lYwVIsg1r0u70QY04DeJaydhkKtmjcbPFc=,tag:SZ6jWq3RRZvFHKcus6ClZA==,type:str]
+    IMMICH_ALBUM_ID_JAN: ENC[AES256_GCM,data:PgdDlq5W//9AKIhbAj4ObpzIlngApdPvq+LPOysULHbHUO2z,iv:Fu/0LPzNtx22kcOV9zE5MBlETwlQMnc5kUE1Xd9QIdU=,tag:3CGvBL9xFkzEiCkMkch5MA==,type:str]
 sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
     age:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKWnBTZGR2c2NLVVJlVHFT
-            ZkEra0pqYzRmMTUvME1WNC9Mc0pOeWFmY0VRCm5PQkdGdk5kV0xpdlZKSlNBT0o5
-            Sk13ekFFZEE5S2FqNFVGZXc5SnYwOXMKLS0tIHRmbG96UTI5VXBkN1UzZmRWcTN1
-            T0VvQ2Erd2c0OFE0b3gyci9ueFFOelEK4qWMuK3uOHvcra4CtFW39OCyZawumW0F
-            VIuItBCFbcCpQSyQk2Wrty4Vc7TAqRfVaom+6bGv3Mm3fsjHMb8Hag==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZ1ZMaTNDTGpUaG5jRGky
+            WmJjU2FVR2p3YzBJbG5sR0VRS0dXbE5aM0FnClhWWGp0ZDQ1dWt1L0t3a1VLV1E4
+            TlJxQm1hU2RqWWlESmFLWFNMU2Z2WlEKLS0tIGdIemlkS0xsWlBmdWtBY3F6c2RN
+            UjUwcUY5bjQ2d21uNFRHbkNkc0ZGcGsKI79d/g5I40rid5Agc5Fs8sg+jz+phvjh
+            sDa5UY9L1cqmL5g4HEOdKDk7iyWiQecEbHffS3AOMKdtYFPzbcAA8w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-24T21:10:32Z"
-    mac: ENC[AES256_GCM,data:cn87gzDgdR/FFbLmaWC3kfLqZg86dlhNw1GOQ70BiLd5QMp/JcfRK0hyqOwwtq/MT9NyrmMPFPqHNIpY35k02qSMbqvkLeQQTRuDOuQq9XS9jltvFbATHy/wMvxQFimd4R3gvgBKmXtWIZ5gLg/vct9QXhcOoqCTIkgylHfbS8U=,iv:SdPafyfz8qHI8nMxkLVZkfI73e9VmnLGTEyRqyh6y/U=,tag:FJ5oYzp9p6roQ4PScOBALA==,type:str]
+    lastmodified: "2025-04-25T04:56:47Z"
+    mac: ENC[AES256_GCM,data:0cx3L5UFyMGmkDn1/lZzc73bPeOGveRL1R16PDdhkQio4h6ceCkGMK67pTgaFUqvPXZVGoEOCK7aEcbU8otDeWsj0czmy0n9Bi3kR92fgJkRuaf4SJiV/h5DjUcSxdlFc70VgzW0xNzIPEwgwVnfcaEihucphKZitsC1qBkrwfY=,iv:HJQE6MuzEJqgUICp2PqLjIkQNg/jhcX9PG/BAa9SYpc=,tag:ot3f4jq2Hldg132P8a/XvA==,type:str]
+    pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.10.2
+    version: 3.9.4
