--- a/apps/production/openwebui/kustomization.yaml
+++ b/apps/production/openwebui/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/openwebui
+  - ingressConfig.yaml
 
 patches:
   - path: patch.yaml
