--- a/apps/base/immich/manifest.yaml
+++ b/apps/base/immich/manifest.yaml
@@ -40,7 +40,7 @@ spec:
       interval: 12h
   values:
     image:
-      tag: v1.132.1
+      tag: v1.132.x
     immich:
       persistence:
         library:
