--- a/renovate.json
+++ b/renovate.json
@@ -7,12 +7,22 @@
   "kubernetes": {
     "fileMatch": ["\\.yaml$"]
   },
+  "helm-values": {
+    "fileMatch": ["\\.yaml$"]
+  },
   "packageRules": [
     {
       "matchPackageNames": ["renovate/renovate"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true,
       "schedule": ["* 0-3 * * 1"]
+    },
+    {
+      "managers": ["helm-values"],
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["ghcr.io/immich-app/immich"],
+      "matchPaths": [".*immich.*\\.yaml$"],
+      "automerge": false
     }
   ]
 }
