--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -32,6 +32,7 @@ spec:
   chart:
     spec:
       chart: traefik
+      version: "34.0.0"
       sourceRef:
         kind: HelmRepository
         name: traefik
