--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -35,6 +35,7 @@ spec:
   chart:
     spec:
       chart: velero
+      version: "7.2.2"
       sourceRef:
         kind: HelmRepository
         name: vmware-tanzu
