--- a/infrastructure/base/cert-manager/manifest.yaml
+++ b/infrastructure/base/cert-manager/manifest.yaml
@@ -24,6 +24,7 @@ spec:
   chart:
     spec:
       chart: cert-manager
+      version: "1.17.2"
       sourceRef:
         kind: HelmRepository
         name: cert-manager
