--- a/infrastructure/base/cloudnative-pg/manifest.yaml
+++ b/infrastructure/base/cloudnative-pg/manifest.yaml
@@ -32,6 +32,7 @@ spec:
   chart:
     spec:
       chart: cloudnative-pg
+      version: "0.22.1"
       sourceRef:
         kind: HelmRepository
         name: cloudnative-pg
