--- a/infrastructure/base/keycloak/manifest.yaml
+++ b/infrastructure/base/keycloak/manifest.yaml
@@ -33,6 +33,7 @@ spec:
   chart:
     spec:
       chart: keycloak
+      version: "24.5.8"
       sourceRef:
         kind: HelmRepository
         name: bitnami
