metallb: moved chart version into helmchart. Deleted patch.

--- a/infrastructure/base/metallb/manifest.yaml
+++ b/infrastructure/base/metallb/manifest.yaml
@@ -36,6 +36,7 @@ spec:
   chart:
     spec:
       chart: metallb
+      version: 0.14.9
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
