--- a/infrastructure/base/smb-csi/manifest.yaml
+++ b/infrastructure/base/smb-csi/manifest.yaml
@@ -37,6 +37,7 @@ spec:
   chart:
     spec:
       chart: csi-driver-smb
+      version: "1.17.0"
       sourceRef:
         kind: HelmRepository
         name: smb-csi
