--- a/apps/base/openwebui/manifest.yaml
+++ b/apps/base/openwebui/manifest.yaml
@@ -32,6 +32,7 @@ spec:
   chart:
     spec:
       chart: open-webui
+      version: "6.4.0"
       sourceRef:
         kind: HelmRepository
         name: openwebui
