--- a/apps/base/searxng/manifest.yaml
+++ b/apps/base/searxng/manifest.yaml
@@ -32,6 +32,7 @@ spec:
   chart:
     spec:
       chart: searxng
+      version: "1.0.1"
       sourceRef:
         kind: HelmRepository
         name: kubitodev
