--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -75,6 +75,10 @@ spec:
           DISABLE_REGISTRATION: true
           SHOW_REGISTRATION_BUTTON: false
           REQUIRE_SIGNIN_VIEW: true
+          ENABLE_MIGRATION: true
+          MIGRATE_PLAIN_HTTP: true
+          MIGRATE_SSL_NO_VERIFY: false
+          MIGRATE_RESPONSE_TIMEOUT: 60
         repository:
           ENABLE_PUSH_CREATE_USER: true
         database:
