renovate: Added automerge for minor and patch releases of immich.

--- a/renovate.json
+++ b/renovate.json
@@ -1,30 +1,20 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
+  "extends": ["config:recommended"],
   "flux": {
-    "fileMatch": [
-      "\\.yaml$"
-    ]
+    "fileMatch": ["\\.yaml$"]
   },
   "kubernetes": {
-    "fileMatch": [
-      "\\.yaml$"
-    ]
+    "fileMatch": ["\\.yaml$"]
   },
   "helm-values": {
-    "fileMatch": [
-      "\\.yaml$"
-    ]
+    "fileMatch": ["\\.yaml$"]
   },
   "customManagers": [
     {
       "description": "Track the Immich image tag in FluxCD HelmRelease",
       "customType": "regex",
-      "fileMatch": [
-        "\\.yaml$"
-      ],
+      "fileMatch": ["\\.yaml$"],
       "matchStrings": [
         "image:\\s*\n(.*\n)*?\\s*tag:\\s*['\"]?(?<currentValue>v?\\d+\\.\\d+\\.\\d+)['\"]?"
       ],
@@ -34,32 +24,25 @@
   ],
   "packageRules": [
     {
-      "matchPackageNames": [
-        "renovate/renovate"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
+      "matchPackageNames": ["renovate/renovate"],
+      "matchUpdateTypes": ["minor", "patch"],
       "automerge": true,
-      "schedule": [
-        "* 0-3 * * 1"
-      ]
+      "schedule": ["* 0-3 * * 1"]
     },
     {
-      "matchManagers": [
-        "custom.regex"
-      ],
-      "matchDatasources": [
-        "docker"
-      ],
-      "matchPackageNames": [
-        "ghcr.io/immich-app/immich-server"
-      ],
-      "matchFileNames": [
-        ".*immich.*\\.yaml$"
-      ],
+      "matchManagers": ["custom.regex"],
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
+      "matchFileNames": [".*immich.*\\.yaml$"],
       "automerge": false
+    },
+    {
+      "matchManagers": ["custom.regex"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
+      "matchFileNames": [".*immich.*\\.yaml$"],
+      "automerge": true
     }
   ]
 }
