renovate: Added automerge for minor and patch releases of forgejo

--- a/renovate.json
+++ b/renovate.json
@@ -30,6 +30,11 @@
       "schedule": ["* 0-3 * * 1"]
     },
     {
+      "matchPackageNames": ["forgejo"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "matchManagers": ["custom.regex"],
       "matchDatasources": ["docker"],
       "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
