renovate: Added automerge for minor and patch releases for bitnami/keycloak

--- a/renovate.json
+++ b/renovate.json
@@ -35,6 +35,11 @@
       "automerge": true
     },
     {
+      "matchPackageNames": ["bitnami/keycloak"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "matchManagers": ["custom.regex"],
       "matchDatasources": ["docker"],
       "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
