--- a/apps/production/openwebui/ingressConfig.yaml
+++ b/apps/production/openwebui/ingressConfig.yaml
@@ -14,6 +14,7 @@ spec:
       services:
         - name: open-webui
           port: 80
+          serversTransport: openwebui-transport
       middlewares:
         - name: svc-openwebui-headers
         - name: openwebui-compress
@@ -58,3 +59,23 @@ metadata:
   namespace: openwebui
 spec:
   compress: {} # Enables default compression (e.g., gzip)
+---
+apiVersion: traefik.io/v1alpha1
+kind: ServersTransport
+metadata:
+  name: openwebui-transport
+  namespace: openwebui
+spec:
+  # Default is 2. Increasing allows more idle connections to be kept per host,
+  # reducing connection setup latency for subsequent requests.
+  maxIdleConnsPerHost: 10
+  forwardingTimeouts:
+    # Time to wait for a connection to the backend to be established.
+    # Default is 30s. A lower value can give quicker feedback if a pod is slow to accept connections.
+    dialTimeout: "5s"
+    # Time to wait for a server's response headers after fully writing the request.
+    # Default is 0 (no timeout). Setting this can be useful if openwebui sometimes is slow to start responding.
+    responseHeaderTimeout: "120s"
+    # Maximum amount of time an idle (keep-alive) connection will remain idle before closing itself.
+    # Default is 90s.
+    idleConnTimeout: "180s"
