--- a/apps/production/openwebui/ingressConfig.yaml
+++ b/apps/production/openwebui/ingressConfig.yaml
@@ -20,6 +20,9 @@ spec:
         - name: openwebui-compress
   tls:
     secretName: ai-vandelocht-uk-production-tls
+    options:
+      name: openwebui-tls-options
+      namespace: openwebui
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
@@ -79,3 +82,25 @@ spec:
     # Maximum amount of time an idle (keep-alive) connection will remain idle before closing itself.
     # Default is 90s.
     idleConnTimeout: "180s"
+---
+apiVersion: traefik.io/v1alpha1
+kind: TLSOption
+metadata:
+  name: openwebui-tls-options
+  namespace: openwebui
+spec:
+  minVersion: VersionTLS12 # Enforce a minimum of TLS 1.2
+  # Modern cipher suites. Order matters for preference.
+  # Includes TLS 1.3 ciphers which are non-configurable but good to list for clarity.
+  cipherSuites:
+    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+    - TLS_AES_256_GCM_SHA384 # TLS 1.3
+    - TLS_CHACHA20_POLY1305_SHA256 # TLS 1.3
+  curvePreferences:
+    - X25519
+    - CurveP256
+  # alpnProtocols defaults to ["h2", "http/1.1", "acme-tls/1"], which is generally fine
+  # and supports HTTP/2 if your clients and Traefik entrypoint are configured for it.
