--- a/renovate.json
+++ b/renovate.json
@@ -49,6 +49,13 @@
       "automerge": true
     },
     {
+      "description": "Automerge minor and patch updates for the kube-prometheus-stack Helm chart",
+      "matchPackageNames": ["kube-prometheus-stack"],
+      "matchDatasources": ["helm"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    },
+    {
       "matchManagers": ["custom.regex"],
       "matchDatasources": ["docker"],
       "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
