--- a/clusters/staging/apps/kustomization.yaml
+++ b/clusters/staging/apps/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - immich.yaml
   - openwebui.yaml
   - searxng.yaml
-  - anything-llm.yaml
+  # - anything-llm.yaml
   # - forgejo.yaml
