renovate: modified package rule of immich
further optimised

--- a/renovate.json
+++ b/renovate.json
@@ -65,16 +65,8 @@
     {
       "matchManagers": ["custom.regex"],
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
-      "matchFileNames": [".*immich.*\\.yaml$"],
-      "automerge": false
-    },
-    {
-      "matchManagers": ["custom.regex"],
-      "matchDatasources": ["docker"],
       "matchUpdateTypes": ["minor", "patch"],
-      "matchPackageNames": ["ghcr.io/immich-app/immich-server"],
-      "matchFileNames": [".*immich.*\\.yaml$"],
+      "matchPackageNames": ["immich-server"],
       "automerge": true
     }
   ]
