--- a/apps/base/website/kustomization.yaml
+++ b/apps/base/website/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - immich.yaml
-  - openwebui.yaml
-  - searxng.yaml
-  - website.yaml
+  - manifest.yaml
