--- a/apps/production/website/kustomization.yaml
+++ b/apps/production/website/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - immich.yaml
-  - openwebui.yaml
-  - searxng.yaml
-  - website.yaml
+  - ../../base/website
+  - ingressConfig.yaml
