website: deactivated stripping middleware

--- a/apps/production/website/ingressConfig.yaml
+++ b/apps/production/website/ingressConfig.yaml
@@ -16,7 +16,7 @@ spec:
           port: 3000
       middlewares:
         - name: svc-website-headers
-        - name: website-calc-stripprefix
+        # - name: website-calc-stripprefix
     - match: Host(`vandelocht.uk`)
       kind: Rule
       services:
