website: deactivated header middleware
removed middleware

--- a/apps/production/website/ingressConfig.yaml
+++ b/apps/production/website/ingressConfig.yaml
@@ -14,8 +14,8 @@ spec:
       services:
         - name: website-frontend
           port: 3000
-      middlewares:
-        - name: svc-website-headers
+      # middlewares:
+        # - name: svc-website-headers
         # - name: website-calc-stripprefix
     - match: Host(`vandelocht.uk`)
       kind: Rule
