grafana: Added dashboard for nixnas

--- a/monitoring/configs/kustomization.yaml
+++ b/monitoring/configs/kustomization.yaml
@@ -20,6 +20,7 @@ configMapGenerator:
       - dashboards/pvc-stats.json
       - dashboards/cert-manager.json
       - dashboards/kube-cluster-default.json
+      - dashboards/telegraf-system.json
     options:
       labels:
         grafana_dashboard: "1"
