Added force reset

--- a/renovate/manifest.yaml
+++ b/renovate/manifest.yaml
@@ -9,7 +9,7 @@ metadata:
   name: renovate
   namespace: renovate
 spec:
-  schedule: '@hourly'
+  schedule: "@hourly"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
@@ -26,6 +26,10 @@ spec:
               env:
                 - name: LOG_LEVEL
                   value: debug
+                - name: RENOVATE_FORCE # Force reset
+                  value: '{"schedule": ["at any time"]}'
+                - name: RENOVATE_RECREATE_CLOSED # Recreate closed PRs
+                  value: "true"
               envFrom:
                 - secretRef:
                     name: renovate-env
