--- a/clusters/staging/apps/kustomization.yaml
+++ b/clusters/staging/apps/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - immich.yaml
+  - endurain.yaml
   - openwebui.yaml
   - searxng.yaml
   - website.yaml
