--- a/apps/base/endurain/manifest.yaml
+++ b/apps/base/endurain/manifest.yaml
@@ -9,6 +9,7 @@ metadata:
   labels:
     io.kompose.service: endurain
   name: endurain
+  namespace: endurain
 spec:
   replicas: 1
   selector:
@@ -53,6 +54,7 @@ metadata:
   labels:
     io.kompose.service: endurain-data-claim
   name: endurain-data-claim
+  namespace: endurain
 spec:
   accessModes:
     - ReadWriteOnce
@@ -66,6 +68,7 @@ metadata:
   labels:
     io.kompose.service: endurain-logs-claim
   name: endurain-logs-claim
+  namespace: endurain
 spec:
   accessModes:
     - ReadWriteOnce
@@ -79,6 +82,7 @@ metadata:
   labels:
     io.kompose.service: endurain
   name: endurain
+  namespace: endurain
 spec:
   ports:
     - name: "8080"
@@ -93,6 +97,7 @@ metadata:
   labels:
     io.kompose.service: endurain-env
   name: env
+  namespace: endurain
 data:
   BEHIND_PROXY: "true"
   ENDURAIN_HOST: https://train.vandelocht.uk
