--- a/apps/base/endurain/manifest.yaml
+++ b/apps/base/endurain/manifest.yaml
@@ -22,6 +22,9 @@ spec:
       labels:
         io.kompose.service: endurain
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
       containers:
         - name: endurain-app
           image: ghcr.io/joaovitoriasilva/endurain:v0.13.2
