--- a/apps/base/endurain/manifest.yaml
+++ b/apps/base/endurain/manifest.yaml
@@ -31,9 +31,7 @@ spec:
       labels:
         io.kompose.service: endurain
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
+      # Let the container handle its own user management with gosu
       containers:
         - name: endurain-app
           image: ghcr.io/joaovitoriasilva/endurain:v0.13.2
@@ -45,10 +43,6 @@ spec:
               name: endurain-data-claim
             - mountPath: /app/backend/logs
               name: endurain-logs-claim
-            - mountPath: /app/frontend/dist/env.js
-              name: frontend-env
-              subPath: env.js
-              readOnly: true
           envFrom:
             - configMapRef:
                 name: env
@@ -61,9 +55,6 @@ spec:
         - name: endurain-logs-claim
           persistentVolumeClaim:
             claimName: endurain-logs-claim
-        - name: frontend-env
-          configMap:
-            name: endurain-frontend-env
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
