--- a/apps/production/matrix/kustomization.yaml
+++ b/apps/production/matrix/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/matrix
-  - ingressConfig.yaml
+  # - ingressConfig.yaml
   - matrix-postgresql.yaml
+  - matrix-minio.yaml
+  - matrix-registration.yaml
